<resources>
    <string name="app_name">SmartTeamTracking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="group_icon_description">group_icon</string>
    <string name="group_name">group name</string>
    <string name="group_description">group description</string>
    <string name="enter_group_name">Enter group\'s name</string>
    <string name="friends">Friends</string>
    <string name="available_users">aval_users</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_description">Friend description</string>
    <string name="available_friend">online/offline</string>
    <string name="initials">FN</string>
    <string name="group_initials">GN</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="enter_friends_mail">Enter friend\'s mail</string>
    <string name="accept">accept</string>
    <string name="enter_zone">choose the appropriate area</string>
    <string name="nul">null</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="facebook_app_id">1579642739001091</string>
    <string name="title_activity_basic">BasicActivity</string>
</resources>
