<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="2dp"
    android:elevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <GridLayout
            android:id="@+id/profile_ds"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/circle">
            <TextView
                android:id="@+id/initials"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initials"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textAllCaps="true"/>
        </GridLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/friend_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_name"
                android:textColor="@color/blue_600"
                android:textSize="22sp"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/friend_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_description"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <TextView
            android:id="@+id/friend_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:text="@string/available_friend"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
