<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_margin="1dp"
    android:elevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/card_padding">
        <GridLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/circle">
            <TextView
                android:id="@+id/pending_group_initials"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/group_initials"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textAllCaps="true"/>
        </GridLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/pending_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textColor="@color/blue_600"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/pending_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_description"
                android:textColor="@color/amber_400"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/pending_num_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/available_users"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
